--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,7 +30,7 @@
     --muted-foreground: 240 3.8% 46.1%;
     --accent: 240 4.8% 95.9%;
     --accent-foreground: 240 5.9% 10%;
-    --destructive: 270 95% 75%;
+    --destructive: 24.6 95% 53.1%;
     --destructive-foreground: 0 0% 98%;
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
@@ -53,8 +53,8 @@
     --muted-foreground: 240 5% 64.9%;
     --accent: 12 6.5% 15.1%;
     --accent-foreground: 0 0% 98%;
-    --destructive: 270 95% 75%;
-    --destructive-foreground: 0, 86%, 97%;
+    --destructive: 27 96% 61%;
+    --destructive-foreground: 33.3 100% 96.5%;
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
     --ring: 351 95% 71%;
